# raw-crypto

./: .travis.yml  Cargo.toml  README.md
ext/: chacha.c  chacha.h  crypto.c  crypto.h  difficulty.cpp  generic-ops.h  groestl.c  hash-ops.h  hash.h  random.c  random.h  skein_port.h  vec.cpp  vec_pub.cpp  vec_signature.cpp
ext/cryptonote/: difficulty.cpp
ext/cryptonote/core/: difficulty.cpp  difficulty.h
ext/cryptonote/core/util/: amount.cpp  amount.h
ext/util/: vec_pub.cpp  vec_signature.cpp
src/: amount.rs  build.rs  chacha.rs  consts.rs  difficulty.rs  hash.rs  key.rs  lib.rs  ring.rs  scalar.rs
